Testing spacing fixes.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -262,6 +262,15 @@ body {
 
         &[data-name="responsivecolumns"] .column .widget {
             margin-top: 0;
+
+
+            &:first-child {
+                margin-top: 80px;
+
+                @media @mobile-650px {
+                    margin-top: 40px;
+                }
+            }
         }
 
 
@@ -370,6 +379,10 @@ body {
 
     .widget {
         margin: 0;
+
+        @media @mobile-650px {
+            margin-bottom: 40px;
+        }
     }
 
 
@@ -450,6 +463,7 @@ body {
 // Adds margin to to responsive column if first item in the zone
 [role="main"] .bk-zone [data-name="responsivecolumns"]:first-child .column {
     margin-top: 60px;
+
 
     .widget:first-child {
         margin-top: 0;
